# mcp-demo

./: gitleaks.toml
.githooks/: pre-commit
mcp-client/: .gitignore  client.py  pyproject.toml
mcp-server/: .gitignore  main.py
mcp-server/tests/: test_gcp.py  test_kubernetes.py
mcp-server/tools/: azure.py  gcp.py  kubernetes.py  weather.py
weather/: mcp_server.py
weather/tests/: test_azure.py  test_proxmox.py
weather/tools/: azure.py  kubernetes.py  proxmox.py  weather.py
